# Development-Techniques-exam

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main_string  main_string.c  main_test  main_test.c  string  string.c  testing.c  testing.h
sub/: CMakeLists.txt  Makefile  cmake_install.cmake  stringFunc.c  stringFunc.h
